--- a/Risk_Aaron/app/templates/Webworker_Single_Table.html
+++ b/Risk_Aaron/app/templates/Webworker_Single_Table.html
@@ -483,7 +483,7 @@
 
 </h1>
 
-
+<div class="container">
 <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12" id="Table1">
     Genrating Data. Please Wait..
@@ -497,17 +497,18 @@
 
 </div>
 {% if form %}
+
   <div class="row">
     <div class="col">
-
       <hr class="col-xs-12">
       {{ wtf.quick_form(form, button_map={'submit': 'outline-secondary btn-lg btn-light'}) }}
-
     </div>
   </div>
+
+
 {% endif %}
 
-
+  </div>
   <br>
 <p>
   <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#Table1_Raw_Div" aria-expanded="false">
