Added Live 1 User download data
Finance, Fellse requested.

--- a/Risk_Aaron/app/templates/Risk_Download_Page.html
+++ b/Risk_Aaron/app/templates/Risk_Download_Page.html
@@ -61,6 +61,11 @@
       <td><a href="{{ url_for('Live3_MT4_Users') }}"><input class="btn btn-primary btn-lg" type="button" value="Live 3 User Details"></a></td>
     </tr>
     <tr>
+      <td><b>MT4 Live 1 User Details</b></td>
+      <td>Download all Live 1 User Details in Excel File.</td>
+      <td><a href="{{ url_for('Live1_MT4_Users') }}"><input class="btn btn-primary btn-lg" type="button" value="Live 1 User Details"></a></td>
+    </tr>
+    <tr>
       <td><b>MT5 BGI Client Terminal</b></td>
       <td>Download MT5 Client Terminal.</td>
       <td><a href="https://download.mql5.com/cdn/web/blackwell.global.investments/mt5/blackwellglobal5setup.exe"><input class="btn btn-primary btn-lg" type="button" value="MT5 Terminal"></a></td>
