Risk Update Tool
checking if Risk update tools are running.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -94,7 +94,7 @@
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('cfh_details') }}">CFH FIX Details</a></li>
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20-%20V1.6%20-%20Vantage/">REST Vantage Margin Trades</a></li>
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20BGI%20-%20V1.3/">REST BGI Margin Trades</a></li>
-
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Monitor_Risk_Tools') }}">Monitor Risk Tools</a></li>
 
                   <div class="dropdown-divider"></div>
 
