Updating monitor tools. Added to Base as well.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -198,6 +198,10 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="https://192.168.64.30:44300">Risk OZ Lab</a>
 
+            <a class="dropdown-item" href="https://support.onezero.com/s/rest-api">OneZero REST Api Docs</a>
+
+
+
           </div>
         </li>
 
