Added Server Usage.
Added Server Usage.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -107,6 +107,7 @@
                   <div class="dropdown-divider"></div>
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('CFH_Soap_Position') }}">CFH Soap Position</a></li>
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('CFH_Soap_Symbol') }}">CFH Soap Symbol</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Computer_Usage') }}">Server Usage</a></a></a></li>
                   <div class="dropdown-divider"></div>
 
 
