--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -119,11 +119,14 @@
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Daily_Change_Spread_V1.9/">Daily Change Spread</a></li>
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Risk_AutoCut_V3.2//">Risk Auto Cut</a></li>
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Change_User_Group_V1%20.1/">Change User Group</a></li>
-                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/all/ReadOnly_Equity_Below_Credit_V1.2/">Equity below Credit</a></li>
+
                   <div class="dropdown-divider"></div>
-                  <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Daily_Change_Spread_V1.91/">Daily Change Spread</a></li>
-                  <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Change_Spread_manual/">HK Spread Change</a></li>
-                  <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/NFP_Change_Spread_V1.4/">NFP Spread Change</a></li>
+                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/ReadOnly_Equity_Below_Credit_V1.2/">Equity below Credit</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Exclude_Equity_Below_Credit') }}">Equity below Credit Exclude</a></li>
+                  <div class="dropdown-divider"></div>
+                  <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Daily_Change_Spread_V1.91/">Daily Change Spread [External]</a></li>
+                  <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Change_Spread_manual/">HK Spread Change [External]</a></li>
+                  <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/NFP_Change_Spread_V1.4/">NFP Spread Change [External] </a></li>
                   <div class="dropdown-divider"></div>
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/NFP_Change_Spread_V1.4/">NFP Spread Change</a></li>
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/ABook_Match_Trades%20-%20V2.7/?Send_Email_Toggle=0">LP/MT4 Position</a></li>
