--- a/Risk_Aaron/app/static/css/styles.css
+++ b/Risk_Aaron/app/static/css/styles.css
@@ -137,7 +137,7 @@ table.table_orange caption {
 
 
 .general_form {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.85);
 }
 
 .centre-img {
