--- a/Risk_Aaron/app/templates/Webworker_Single_Table.html
+++ b/Risk_Aaron/app/templates/Webworker_Single_Table.html
@@ -497,14 +497,14 @@
 
 </div>
 {% if form %}
-
+<div class="container general_form">
   <div class="row">
     <div class="col">
       <hr class="col-xs-12">
       {{ wtf.quick_form(form, button_map={'submit': 'outline-secondary btn-lg btn-light'}) }}
     </div>
   </div>
-
+</div>
 
 {% endif %}
 
