--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -81,8 +81,8 @@
             </a>
 
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="{{ url_for('ABook_Matching') + "?send_email_flag=0" }}">MT4/LP Python</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('add_off_set') }}">A Book Offset</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('ABook_Matching') + "?send_email_flag=0" }}">MT4/LP ⭐</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('add_off_set') }}">A Book Offset ➕</a></li>
               <div class="dropdown-divider"></div>
 
 
@@ -91,36 +91,40 @@
                   <b>Risk</b> running tools
                 </a>
                 <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown1">
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('cfh_details') }}">CFH FIX Details</a></li>
-                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20-%20V1.6%20-%20Vantage/">REST Vantage Margin Trades</a></li>
-                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20BGI%20-%20V1.3/">REST BGI Margin Trades</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Monitor_Risk_Tools') }}">Monitor Risk Tools</a></li>
+
+                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20-%20V1.6%20-%20Vantage/">REST Vantage Margin Trades ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Get_Margin_Trades%20BGI%20-%20V1.3/">REST BGI Margin Trades ⭐</a></li>
+
 
                   <div class="dropdown-divider"></div>
 
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_auto_cut') }}">Risk Auto Cut</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Exclude_Risk_Autocut') }}">Risk Auto Cut Exclude</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut') }}">Include Into Risk Auto Cut</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_auto_cut') }}">Risk Auto Cut ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Exclude_Risk_Autocut') }}">Risk Auto Cut Exclude ➕</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut') }}">Include Into Risk Auto Cut ➕</a></li>
                   <div class="dropdown-divider"></div>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('noopentrades_changegroup') }}">Change Group</br>(No Open Trades)</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Equity_protect') }}">Equity Protect</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('noopentrades_changegroup') }}">Change Group ⭐</br>(No Open Trades)</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Equity_protect') }}">Equity Protect ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Computer_Usage') }}">Server Usage ⭐</a></a></a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Monitor_Risk_Tools') }}">Monitor Risk Tools ⭐</a></li>
 
                   <div class="dropdown-divider"></div>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('cfh_details') }}">CFH FIX Details ⭐</a></li>
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('CFH_Soap_Position') }}">CFH Soap Position</a></li>
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('CFH_Soap_Symbol') }}">CFH Soap Symbol</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Computer_Usage') }}">Server Usage</a></a></a></li>
-                  <div class="dropdown-divider"></div>
+
 
                   <div class="dropdown-divider"></div>
 
-                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Track_Account_Open_Trades_V1/">MonitorOpen Trades</a></li>
-                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Daily_Change_Spread_V1.9/">Daily Change Spread</a></li>
+                  <div class="dropdown-divider"></div>
+
+                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Track_Account_Open_Trades_V1/">MonitorOpen Trades ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Daily_Change_Spread_V1.9/">Daily Change Spread ⭐</a></li>
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/Risk_AutoCut_V3.2//">Risk Auto Cut</a></li>
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Change_User_Group_V1%20.1/">Change User Group</a></li>
 
                   <div class="dropdown-divider"></div>
-                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/ReadOnly_Equity_Below_Credit_V1.2/">Equity below Credit</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Exclude_Equity_Below_Credit') }}">Equity below Credit Exclude</a></li>
+                  <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/ReadOnly_Equity_Below_Credit_V1.2/">Equity below Credit ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Exclude_Equity_Below_Credit') }}">Equity below Credit Exclude ➕</a></li>
                   <div class="dropdown-divider"></div>
                   <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Daily_Change_Spread_V1.91/">Daily Change Spread [External]</a></li>
                   <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Change_Spread_manual/">HK Spread Change [External]</a></li>
