--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -152,8 +152,8 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
                   <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1wBifOwaghe3lRsxRTRUMkTBEvLN8pmUWlHuGTuoXfFY/edit#gid=1332723419">Risk/Marketting Holiday Timing</a></li>
-                  <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1o-VNxW4aywl5P4QImhZxCS5-Q1-irJhXwaWfND1pNog/edit#gid=0">MT4 Trading Timing</a></li>
-                  <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/19agQW-D4iiewHWLQCeumY4V04-VNLdbyLE0NEDVElEY/edit#gid=0">MT5 Trading Timing</a></li>
+                  <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1o-VNxW4aywl5P4QImhZxCS5-Q1-irJhXwaWfND1pNog/edit#gid=0">MT4 Trading Timing ⌚</a></li>
+                  <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/19agQW-D4iiewHWLQCeumY4V04-VNLdbyLE0NEDVElEY/edit#gid=0">MT5 Trading Timing ⌚</a></li>
                 </ul>
               </li>
 
@@ -197,11 +197,11 @@
             <a class="dropdown-item" href="https://169.45.220.20:44300">BGI Demo Margin
               Trading Hub</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="https://arms3.onezero.com/login">ARMS</a>
+            <a class="dropdown-item" href="https://arms3.onezero.com/login">ARMS 💪</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="https://192.168.64.30:44300">Risk OZ Lab</a>
 
-            <a class="dropdown-item" href="https://support.onezero.com/s/rest-api">OneZero REST Api Docs</a>
+            <a class="dropdown-item" href="https://support.onezero.com/s/rest-api">OneZero REST Api Docs 📃</a>
 
 
 
@@ -222,9 +222,7 @@
               Daily</a>
             <a class="dropdown-item" href="http://192.168.64.73/www/PNL/index_signal.php">Signal: PNL Total
               Daily</a>
-            <a class="dropdown-item" href="http://192.168.64.73/www/PNL/index_weekly.php">Signal: PnL
-              Week</a>
-
+            <a class="dropdown-item" href="http://192.168.64.73/www/PNL/index_weekly.php">Signal: PnL Week</a>
 
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="http://192.168.64.73/www/mt5_esunny/mt5_daily_pnl_floating.php">MT5
@@ -234,7 +232,6 @@
             <a class="dropdown-item" href="http://192.168.64.73/www/Others/index_lw_comment_check.php">LW Comment Check</a>
             <a class="dropdown-item" href="http://192.168.20.117:81/www/check/index_mt4_lp_check.php">Check
               Mismatch</a>
-
 
             <a class="dropdown-item" href="http://192.168.64.73/www/pro_bal_20/index_reg.php">P/B (REGDATE) > 20%</a>
             <a class="dropdown-item" href="http://192.168.64.73/www/30s%201m/live123%201m.html">Mt4 trades within 1 min</a>
