Updated SQ's website

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -242,6 +242,22 @@
 
           </div>
         </li>
+
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            SQ Tool
+          </a>
+
+          <div class="dropdown-menu dropdown-menu-right">
+            <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting/index.action">Live 1 Setting</a>
+            <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting-test/index.action">Live 2 Setting</a>
+            <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting-test2/index.actionl">Live 3 setting</a>
+
+          </div>
+        </li>
+
+
         {% endif %}
         {% endif %}
         <li class="nav-item">
