--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -172,41 +172,9 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('Create_User') }}">Create Users</a>
           </li>
-          <li class="nav-item dropdown">
-          <li><a class="dropdown-item" href="https://www.dailyfx.com/economic-calendar">Daily FX Calandar</a></li>
-          <li><a class="dropdown-item" href="https://www.poundsterlingforecast.com/">Pound Sterling Forcast</a></li>
-          <li><a class="dropdown-item" href="https://global.markets.com/holiday-schedule/">Global Markets Trading Holiday</a></li>
-          <div class="dropdown-divider"></div>
-          <li><a class="dropdown-item" href="https://support.metaquotes.net/en/users/login?returnUrl=%2Fen">Meta Support</a></li>
         </ul>
         </li>
 
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            OZ Web
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="https://38.76.4.235:44300/Account/Login?ReturnUrl=%2F">BGI NY4
-              Margin Hub</a>
-            <a class="dropdown-item" href="https://38.76.4.235:44301/">BGI NY4 Retail Hub</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="https://38.76.4.67:44300/Account/Login?ReturnUrl=%2F">Vantage BGI
-              Trading Hub</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="https://169.45.220.20:44300">BGI Demo Margin
-              Trading Hub</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="https://arms3.onezero.com/login">ARMS 💪</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="https://192.168.64.30:44300">Risk OZ Lab</a>
-
-            <a class="dropdown-item" href="https://support.onezero.com/s/rest-api">OneZero REST Api Docs 📃</a>
-
-
-
-          </div>
-        </li>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -252,10 +220,69 @@
           <div class="dropdown-menu dropdown-menu-right">
             <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting/index.action">Live 1 Setting</a>
             <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting-test/index.action">Live 2 Setting</a>
-            <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting-test2/index.actionl">Live 3 setting</a>
+            <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting-test2/index.action">Live 3 setting</a>
 
           </div>
         </li>
+
+
+        <!-- Level one dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown8" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            External Links 🎈
+          </a>
+
+          <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown8">
+
+            <li class="nav-item dropleft">
+              <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown10" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <b>OZ Web</b>
+              </a>
+              <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown10">
+                <li><a class="dropdown-item" href="https://38.76.4.235:44300/Account/Login?ReturnUrl=%2F">BGI NY4 Margin Hub</a></li>
+                <li><a class="dropdown-item" href="https://38.76.4.235:44301/">BGI NY4 Retail Hub</a></li>
+                <div class="dropdown-divider"></div>
+                <li><a class="dropdown-item" href="https://38.76.4.67:44300/Account/Login?ReturnUrl=%2F">Vantage BGI Trading Hub</a></li>
+                <div class="dropdown-divider"></div>
+                <li><a class="dropdown-item" href="https://169.45.220.20:44300">BGI Demo Margin Trading Hub</a></li>
+                <div class="dropdown-divider"></div>
+                <li><a class="dropdown-item" href="https://arms3.onezero.com/login">ARMS 💪</a></li>
+                <div class="dropdown-divider"></div>
+                <li><a class="dropdown-item" href="https://192.168.64.30:44300">Risk OZ Lab</a></li>
+
+                <li><a class="dropdown-item" href="https://support.onezero.com/s/rest-api">OneZero REST Api Docs 📃</a></li>
+
+              </ul>
+            </li>
+
+
+            <li class="nav-item dropleft">
+              <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown11" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <b>3rd party Swaps</b>
+              </a>
+              <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown11">
+                <li><a class="dropdown-item" href="https://www.fxdd.com/mt/en/trading/offering">Fxdd Swaps</a></li>
+                <li><a class="dropdown-item" href="https://www.forex.com/en/trading/pricing-fees/rollover-rates/">FOREX.com Swaps</a></li>
+                <li><a class="dropdown-item" href="https://www.fpmarkets.com/swap-point">FPmarkets Swaps</a></li>
+                <li><a class="dropdown-item" href="https://www.tradeviewforex.com/room/forex-resources/rollover-rates">Tradeview forex Swaps</a></li>
+                <li><a class="dropdown-item" href="https://www.home.saxo/en-sg/rates-and-conditions/forex/trading-conditions#historic-swap-points">Saxo Swaps</a></li>
+
+
+
+
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown">
+            <li><a class="dropdown-item" href="https://www.dailyfx.com/economic-calendar">Daily FX Calandar</a></li>
+            <li><a class="dropdown-item" href="https://www.poundsterlingforecast.com/">Pound Sterling Forcast</a></li>
+            <li><a class="dropdown-item" href="https://global.markets.com/holiday-schedule/">Global Markets Trading Holiday</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a class="dropdown-item" href="https://support.metaquotes.net/en/users/login?returnUrl=%2Fen">Meta Support</a></li>
+            </ul>
+            </li>
+            </li>
+
 
 
         {% endif %}
