--- a/Risk_Aaron/app/templates/Webworker_Single_Table.html
+++ b/Risk_Aaron/app/templates/Webworker_Single_Table.html
@@ -508,7 +508,22 @@
 
 {% endif %}
 
-  </div>
+
+{% if table %}
+<br>
+<h2>Uploaded Swap Values</h2>
+<div class="container">
+
+{{ table  }}
+
+</div>
+<br>
+{% endif %}
+
+
+
+
+</div>
   <br>
 <p>
   <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#Table1_Raw_Div" aria-expanded="false">
