--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -156,7 +156,7 @@
                   BGI Data
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
-                  <li><a class="dropdown-item" href="{{ url_for('BGI_Swaps') }}">BGI Swaps</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('swaps.BGI_Swaps') }}">BGI Swaps</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('Changed_readonly') }}">Changed Read Only</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('Bloomberg_Dividend') }}">Bloomberg Dividend</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('BGI_Convert_Rate') }}">BGI FX Convert Rates</a></li>
@@ -262,7 +262,7 @@
 
             <li class="nav-item dropleft">
               <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown11" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <b>Swaps [External Broker]
+                <b>Swaps</b> [External Broker]
               </a>
               <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown11">
                 <li><a class="dropdown-item" href="https://www.fxdd.com/mt/en/trading/offering">Fxdd Swaps</a></li>
