--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -158,7 +158,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
                   <li><a class="dropdown-item" href="{{ url_for('swaps.BGI_Swaps') }}">BGI Swaps</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('Changed_readonly') }}">Changed Read Only</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('Bloomberg_Dividend') }}">Bloomberg Dividend</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('swaps.Bloomberg_Dividend') }}">Bloomberg Dividend</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('BGI_Convert_Rate') }}">BGI FX Convert Rates</a></li>
                 </ul>
               </li>
@@ -169,7 +169,6 @@
           </li>
         </ul>
         </li>
-
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
