Updated Risk Auto Cut to add in Specific Logins
into aaron.risk_autocut_include

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -99,8 +99,9 @@
                   <div class="dropdown-divider"></div>
 
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_auto_cut') }}">Risk Auto Cut ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut') }}">Risk Auto Cut Include ➕</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut_Group') }}">Risk Auto Cut [Add Group] ➕</a></li>
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Exclude_Risk_Autocut') }}">Risk Auto Cut Exclude ➕</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut') }}">Include Into Risk Auto Cut ➕</a></li>
                   <div class="dropdown-divider"></div>
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('noopentrades_changegroup') }}">Change Group ⭐</br>(No Open Trades)</a></li>
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Equity_protect') }}">Equity Protect ⭐</a></li>
