Updated Risk Auto cut for single login
Updated Risk Auto cut for single login

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -99,7 +99,7 @@
                   <div class="dropdown-divider"></div>
 
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_auto_cut') }}">Risk Auto Cut ⭐</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut') }}">Risk Auto Cut Include ➕</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut') }}">Risk Auto Cut [Add Login]] ➕</a></li>
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut_Group') }}">Risk Auto Cut [Add Group] ➕</a></li>
                   <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Exclude_Risk_Autocut') }}">Risk Auto Cut Exclude ➕</a></li>
                   <div class="dropdown-divider"></div>
